# new-rusty-machine

./: .gitignore  Cargo.toml  app.py  benchmark.py  build.rs  pyproject.toml  requirements.txt
rustymachine_api/: __init__.py  models.py
src/: kernels.cu  kernels.ptx  lib.rs
