# This section defines the metadata for the Rust package (crate).
[package]
name = "rusty_machine"
version = "0.1.0"
edition = "2021"

# This section configures the library build.
[lib]
# The name of the resulting library file.
name = "rusty_machine"
# Specifies the crate type as a 'cdylib' (C-style Dynamic Library).
# This is required for creating a Python extension module that can be
# imported by the Python interpreter.
crate-type = ["cdylib"]

# This section lists all the Rust dependencies (crates) required
# by this project.
[dependencies]
# The `pyo3` crate provides the Rust bindings for the Python interpreter.
# The "extension-module" feature is essential for building the shared
# library in a way that Python can import.
pyo3 = { version = "0.25.1", features = ["extension-module"] }

# The `cust` crate provides a high-level, safe wrapper around the
# NVIDIA CUDA driver API, allowing for easier management of GPU
# resources, memory, and kernel launches from Rust.
cust = "0.3.2"